# unsent-python

./: README.md  pyproject.toml
scripts/: generate_types.sh
tests/: conftest.py  test_activity.py  test_analytics.py  test_api_keys.py  test_campaigns.py  test_contact_books.py  test_contacts.py  test_domains.py  test_emails.py  test_events.py  test_metrics.py  test_settings.py  test_stats.py  test_suppressions.py  test_teams.py  test_templates.py  test_unsent.py  test_webhooks.py
unsent/: __init__.py  activity.py  analytics.py  api_keys.py  campaigns.py  contact_books.py  contacts.py  domains.py  emails.py  events.py  legacy_types.py  metrics.py  provider_connections.py  settings.py  stats.py  suppressions.py  system.py  teams.py  templates.py  types.py  unsent.py  webhooks.py
