[tool.poetry]
name = "unsent"
version = "1.0.2"
description = "Python SDK for the Unsent API - Send transactional emails with ease"
authors = ["sourav"]
license = "MIT"
readme = "README.md"
homepage = "https://unsent.dev"
repository = "https://github.com/souravsspace/unsent-python"
documentation = "https://docs.unsent.dev"
keywords = ["unsent", "email", "transactional-email", "api", "sdk"]
packages = [{ include = "unsent" }]
include = ["unsent/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.32.0"
typing_extensions = ">=4.7"
pydantic = {extras = ["email"], version = "^2.12.5"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
requests-mock = "^1.11.0"
datamodel-code-generator = "^0.52.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
